refactor(user-panel): mejoras visuales en el panel de usuario

--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -87,7 +87,7 @@
             
             <mat-divider></mat-divider>
             
-            <a routerLink="/perfil" mat-menu-item class="dropdown-item">
+            <a routerLink="/user_panel" mat-menu-item class="dropdown-item">
               <mat-icon>person</mat-icon>
               <span>Mi Perfil</span>
             </a>
@@ -245,7 +245,7 @@
           </mat-icon>
           <span>Carrito</span>
         </a>
-        <a routerLink="/perfil" mat-button class="mobile-link" (click)="closeMobileMenu()">
+        <a routerLink="/user_panel" mat-button class="mobile-link" (click)="closeMobileMenu()">
           <mat-icon>person</mat-icon>
           <span>Mi Perfil</span>
         </a>
